--- a/k8s/cert-manager/kustomization.yaml
+++ b/k8s/cert-manager/kustomization.yaml
@@ -2,13 +2,13 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 resources:
-  - https://github.com/cert-manager/cert-manager/releases/latest/download/cert-manager.crds.yaml
+  - https://github.com/cert-manager/cert-manager/releases/v1.17.2/download/cert-manager.crds.yaml # renovate: https://charts.jetstack.io
   - ns.yaml
 
 helmCharts:
   - name: cert-manager
     repo: https://charts.jetstack.io
-    version: 1.13.3
+    version: 1.13.3 # renovate: github-releases=jetstack/cert-manager
     releaseName: cert-manager
     namespace: cert-manager
     valuesInline:
