--- a/k8s/argocd/http-route.yaml
+++ b/k8s/argocd/http-route.yaml
@@ -1,20 +1,19 @@
-# gateway/http-route.yaml
 apiVersion: gateway.networking.k8s.io/v1
 kind: HTTPRoute
 metadata:
-  name: my-http-route
-  namespace: default
+  name: argocd
+  namespace: argocd
 spec:
   parentRefs:
     - name: cilium-gateway
       namespace: gateway
   hostnames:
-    - "gateway.local.leonvdbeek.com"
+    - "argocd.local.leonvdbeek.com"
   rules:
     - matches:
         - path:
             type: PathPrefix
             value: /
       backendRefs:
-        - name: my-service
+        - name: argocd-server
           port: 80
