--- a/k8s/cert-manager/kustomization.yaml
+++ b/k8s/cert-manager/kustomization.yaml
@@ -2,7 +2,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 resources:
-  - https://github.com/cert-manager/cert-manager/releases/v1.17.2/download/cert-manager.crds.yaml # renovate: https://charts.jetstack.io
+  - https://github.com/cert-manager/cert-manager/releases/download/v1.18.0/cert-manager.crds.yaml # renovate: https://charts.jetstack.io
   - ns.yaml
 
 helmCharts:
