--- a/k8s/kustomization.yaml
+++ b/k8s/kustomization.yaml
@@ -2,7 +2,10 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 resources:
+- project.yaml
+- application-set.yaml
 - cert-manager
 - cilium
 - gateway
+- argocd
 - https://github.com/bitnami-labs/sealed-secrets/releases/download/v0.30.0/controller.yaml
