--- a/k8s/gateway/kustomization.yaml
+++ b/k8s/gateway/kustomization.yaml
@@ -9,7 +9,7 @@ resources:
   - https://raw.githubusercontent.com/kubernetes-sigs/gateway-api/v1.1.0/config/crd/standard/gateway.networking.k8s.io_grpcroutes.yaml # renovate: github-releases=kubernetes-sigs/gateway-api
   - https://raw.githubusercontent.com/kubernetes-sigs/gateway-api/v1.1.0/config/crd/experimental/gateway.networking.k8s.io_tlsroutes.yaml # renovate: github-releases=kubernetes-sigs/gateway-api
   - ns.yaml
-  - cert-local-leonvdbeek-com.yaml
-  - cloudflare-api-token-secret.yaml
+  - cert-kube-leonvdbeek-com.yaml
+  # - cloudflare-api-token-secret.yaml
   - cloudflare-issuer.yaml
   - gateway-with-infrastructure.yaml
