--- a/k8s/argocd/http-route.yaml
+++ b/k8s/argocd/http-route.yaml
@@ -8,7 +8,7 @@ spec:
     - name: cilium-gateway
       namespace: gateway
   hostnames:
-    - "argocd.kube.leonvdbeek.com"
+    - "argocd.lenovium.leonvdbeek.com"
   rules:
     - matches:
         - path:
