--- a/k8s/cilium/httproute.yaml
+++ b/k8s/cilium/httproute.yaml
@@ -8,7 +8,7 @@ spec:
     - name: cilium-gateway
       namespace: gateway
   hostnames:
-    - "hubble.kube.leonvdbeek.com"
+    - "hubble.lenovium.leonvdbeek.com"
   rules:
     - matches:
         - path:
