--- a/k8s/kustomization.yaml
+++ b/k8s/kustomization.yaml
@@ -8,4 +8,5 @@ resources:
 - cilium
 - gateway
 - argocd
+- longhorn
 - https://github.com/bitnami-labs/sealed-secrets/releases/download/v0.30.0/controller.yaml
