--- a/k8s/longhorn/kustomization.yaml
+++ b/k8s/longhorn/kustomization.yaml
@@ -4,7 +4,7 @@ kind: Kustomization
 namespace: longhorn-system
 
 resources:
-  - namespace.yaml
+  - ns.yaml
   # - recurringjob.yaml
   - http-route.yaml
   # - externalsecret.yaml
