add db and auth to main kustomization

--- a/k8s/kustomization.yaml
+++ b/k8s/kustomization.yaml
@@ -9,4 +9,6 @@ resources:
 - gateway
 - argocd
 - longhorn
+- postgresql
+- authentik
 - https://github.com/bitnami-labs/sealed-secrets/releases/download/v0.30.0/controller.yaml
