--- a/k8s/authentik/kustomization.yaml
+++ b/k8s/authentik/kustomization.yaml
@@ -11,10 +11,10 @@ resources:
 generatorOptions:
   disableNameSuffixHash: true
 
-# helmCharts:
-# - name: authentik
-#   namespace: auth
-#   releaseName: authentik
-#   repo: https://charts.goauthentik.io
-#   valuesFile: values.yaml
-#   version: 2025.6.2
+helmCharts:
+- name: authentik
+  namespace: auth
+  releaseName: authentik
+  repo: https://charts.goauthentik.io
+  valuesFile: values.yaml
+  version: 2025.6.2
