--- a/k8s/postgresql/values.yaml
+++ b/k8s/postgresql/values.yaml
@@ -351,47 +351,47 @@ configAwsOrGcp:
   # wal_az_storage_account: ""
 
 # configure K8s cron job managed by the operator
-configLogicalBackup:
-  # Azure Storage Account specs to store backup results
-  # logical_backup_azure_storage_account_name: ""
-  # logical_backup_azure_storage_container: ""
-  # logical_backup_azure_storage_account_key: ""
+# configLogicalBackup:
+#   # Azure Storage Account specs to store backup results
+#   # logical_backup_azure_storage_account_name: ""
+#   # logical_backup_azure_storage_container: ""
+#   # logical_backup_azure_storage_account_key: ""
 
-  # resources for logical backup pod, if empty configPostgresPodResources will be used
-  # logical_backup_cpu_limit: ""
-  # logical_backup_cpu_request: ""
-  # logical_backup_memory_limit: ""
-  # logical_backup_memory_request: ""
+#   # resources for logical backup pod, if empty configPostgresPodResources will be used
+#   # logical_backup_cpu_limit: ""
+#   # logical_backup_cpu_request: ""
+#   # logical_backup_memory_limit: ""
+#   # logical_backup_memory_request: ""
 
-  # image for pods of the logical backup job (example runs pg_dumpall)
-  logical_backup_docker_image: "ghcr.io/zalando/postgres-operator/logical-backup:v1.14.0"
-  # path of google cloud service account json file
-  # logical_backup_google_application_credentials: ""
+#   # image for pods of the logical backup job (example runs pg_dumpall)
+#   logical_backup_docker_image: "ghcr.io/zalando/postgres-operator/logical-backup:v1.14.0"
+#   # path of google cloud service account json file
+#   # logical_backup_google_application_credentials: ""
 
-  # prefix for the backup job name
-  logical_backup_job_prefix: "logical-backup-"
-  # storage provider - either "s3", "gcs" or "az"
-  logical_backup_provider: "s3"
-  # S3 Access Key ID
-  logical_backup_s3_access_key_id: ""
-  # S3 bucket to store backup results
-  logical_backup_s3_bucket: "homelab-postgres-backups"
-  # S3 bucket prefix to use
-  logical_backup_s3_bucket_prefix: "spilo"
-  # S3 region of bucket
-  logical_backup_s3_region: "us-east-1"
-  # S3 endpoint url when not using AWS
-  logical_backup_s3_endpoint: ""
-  # S3 Secret Access Key
-  logical_backup_s3_secret_access_key: ""
-  # S3 server side encryption
-  logical_backup_s3_sse: "AES256"
-  # S3 retention time for stored backups for example "2 week" or "7 days"
-  logical_backup_s3_retention_time: ""
-  # backup schedule in the cron format
-  logical_backup_schedule: "0 3 * * *"
-  # secret to be used as reference for env variables in cronjob
-  logical_backup_cronjob_environment_secret: ""
+#   # prefix for the backup job name
+#   logical_backup_job_prefix: "logical-backup-"
+#   # storage provider - either "s3", "gcs" or "az"
+#   logical_backup_provider: "s3"
+#   # S3 Access Key ID
+#   logical_backup_s3_access_key_id: ""
+#   # S3 bucket to store backup results
+#   logical_backup_s3_bucket: "homelab-postgres-backups"
+#   # S3 bucket prefix to use
+#   logical_backup_s3_bucket_prefix: "spilo"
+#   # S3 region of bucket
+#   logical_backup_s3_region: "us-east-1"
+#   # S3 endpoint url when not using AWS
+#   logical_backup_s3_endpoint: ""
+#   # S3 Secret Access Key
+#   logical_backup_s3_secret_access_key: ""
+#   # S3 server side encryption
+#   logical_backup_s3_sse: "AES256"
+#   # S3 retention time for stored backups for example "2 week" or "7 days"
+#   logical_backup_s3_retention_time: ""
+#   # backup schedule in the cron format
+#   logical_backup_schedule: "0 3 * * *"
+#   # secret to be used as reference for env variables in cronjob
+#   logical_backup_cronjob_environment_secret: ""
 
 # automate creation of human users with teams API service
 configTeamsApi:
