--- a/k8s/authentik/kustomization.yaml
+++ b/k8s/authentik/kustomization.yaml
@@ -2,7 +2,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 namespace: auth
 resources:
-# - database.yaml
+- database.yaml
 - ns.yaml
 - http-route.yaml
 # - outpost-externalsecret.yaml
