--- a/k8s/authentik/database.yaml
+++ b/k8s/authentik/database.yaml
@@ -1,7 +1,7 @@
 apiVersion: "acid.zalan.do/v1"
 kind: postgresql
 metadata:
-  name: authentik-postgresql
+  name: authentik-postgresql-zalando
   namespace: auth
 spec:
   teamId: "auth"
