--- a/k8s/authentik/database.yaml
+++ b/k8s/authentik/database.yaml
@@ -1,7 +1,7 @@
 apiVersion: "acid.zalan.do/v1"
 kind: postgresql
 metadata:
-  name: authentik-postgresql-zalando
+  name: authentik-postgresql
   namespace: auth
 spec:
   teamId: "auth"
@@ -14,7 +14,7 @@ spec:
       - createdb
   databases:
     authentik: authentik_user
-  # enableLogicalBackup: true
+  enableLogicalBackup: false
   postgresql:
     version: "17"
   enableConnectionPooler: false
