--- a/k8s/authentik/values.yaml
+++ b/k8s/authentik/values.yaml
@@ -1,18 +1,5 @@
 ---
-authentik:
-  secret_key: "rhO3Em1dw1XsTFt434xaH38X0WRFe2NhvzFVUL8Nd7fF8EEWvWPLG3xExC1qYG4fi2Y50sEut+OfTN4P"
-  # This sends anonymous usage-data, stack traces on errors and
-  # performance data to authentik.error-reporting.a7k.io, and is fully opt-in
-  error_reporting:
-    enabled: true
-  # postgresql:
-  #   password: "ThisIsNotASecurePassword"
-  postgresql:
-    host: authentik-postgresql-zalando
-    name: authentik
-    user: file:///secrets/authentik/username
-    password: file:///secrets/authentik/password
-    port: "5432"
+global:
   volumeMounts:
     - name: db-creds
       mountPath: /secrets/authentik
@@ -23,7 +10,22 @@ authentik:
   volumes:
     - name: db-creds
       secret:
-        secretName: authentik-user.authentik-postgresql-zalando.credentials.postgresql.acid.zalan.do
+        secretName: authentik-user.authentik-postgresql.credentials.postgresql.acid.zalan.do
+
+authentik:
+  secret_key: "rhO3Em1dw1XsTFt434xaH38X0WRFe2NhvzFVUL8Nd7fF8EEWvWPLG3xExC1qYG4fi2Y50sEut+OfTN4P"
+  # This sends anonymous usage-data, stack traces on errors and
+  # performance data to authentik.error-reporting.a7k.io, and is fully opt-in
+  error_reporting:
+    enabled: true
+  # postgresql:
+  #   password: "ThisIsNotASecurePassword"
+  postgresql:
+    host: authentik-postgresql
+    name: authentik
+    user: file:///secrets/authentik/username
+    password: file:///secrets/authentik/password
+    port: "5432"
 
 postgresql:
   enabled: false
